main.css
#product-overview{
    background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent), url("./images/freedom.jpg") center/cover no-repeat border-box;
    width: 100vw;
    height: 33vh;
    position: relative;
}

#product-overview h1 {
    color: white;
    font-family: 'Anton', sans-serif;
    position: absolute;
    bottom: 5%;
    left: 5%;
    font-size: 1.6rem;
}


@media (min-width: 40rem) and (min-height: 60rem){
    #product-overview {
        height: 40vh;
        background-position:50% 25%;
    }

    #product-overview h1 {
        font-size: 3rem;
    }
}

.plan {
    background: #d5ffdc;
    text-align: center;
    padding: 1rem;
    width: 100%;
}
/*
*/
.section-title {
    text-align: center;
    font-size: 2rem;
}

.plan__highlighted{
    background: #19b84c;
    color: white;
    /*  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);*/
}

.plan__annotation {
    background: white;
    color: #19b84c;
    padding: 8px;
    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
    border-radius: 5px;
}

.plan__features {
    list-style: none;
    margin:0;
    padding: 0;
}
.plan__feature {
    margin: 8px 0;
}

.plan__title {
    color: #0e4f1f;
}
.plan__price {
    color: #2a2929;
}

.plan--highlighted .plan__title {
    color: white;
}
.plan--highlighted .plan__price {
    color: #0e4f1f;
}

@media (min-width: 40rem) and (orientation: landscape){
    .plan__list {
        width: 100%;
        text-align:center;

    }

    .plan {
        display: inline-block;
        width: 30%;
        vertical-align: middle;
        min-width: 13rem;
        max-width: 25rem;
    }

    .plan--highlighted {
        box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
    }
}

#key-features {
    background: red;
    margin-top:80px;
    padding: 16px;
}

#key-features h1 {
    color: white;
    margin: 32px;
}

.key_features__list {
    list-style: none;
    margin: 0;
    padding: 0;

}
.key-feature {
    display: block;
    color: white;
    text-align: center;

    width: 100%;
}
.key-feature__description {
    text-align: center;
    font-weight: bold;
    font-size: 20px;
}

.key-features__img {
    background: antiquewhite;
    width: 120px;
    height: 120px;
    border: 1px solid black;
    border-radius: 50%;
    margin: auto;
    padding: 20px;
}

@media (min-width: 40rem){
    .key-feature {
        display: inline-block;
        vertical-align: top;
        width: 30%;
        max-width: 25rem;
    }

    .key-features__list {
        text-align: center;
        width:100%;
        margin: 0;
        padding: 0;
    }
}

